--- a/images/oz/master/openshift-master.service
+++ b/images/oz/master/openshift-master.service
@@ -5,7 +5,10 @@ After=docker.target network.target
 
 [Service]
 Environment="OPENSHIFT_DIND=true"
-ExecStart=/usr/bin/openshift start
+ExecStartPre=mkdir -p /var/lib/origin/openshift.local.config/master
+ExecStartPre=cp /config/* /var/lib/origin/openshift.local.config/master/
+ExecStart=/usr/bin/openshift start master --loglevel=5 \
+  --config=/var/lib/origin/openshift.local.config/master/master-config.yaml
 WorkingDirectory=/var/lib/origin
 Restart=on-failure
 RestartSec=10s
