Only pull oz-master image if not present.

--- a/hack/oz/oz-master.yaml
+++ b/hack/oz/oz-master.yaml
@@ -8,6 +8,7 @@ spec:
   containers:
     - image: "openshift/oz-master"
       name: oz-master
+      imagePullPolicy: IfNotPresent
       ports:
         - containerPort: 8443
           name: oz-master
