--- a/images/oz/base/oz.conf
+++ b/images/oz/base/oz.conf
@@ -9,3 +9,5 @@ ExecStart=/usr/local/bin/dind docker daemon \
   --storage-driver=vfs \
   $DOCKER_NETWORK_OPTIONS \
   $INSECURE_REGISTRY
+# This is only required for upstream docker
+MountFlags=
