--- a/hack/oz/oz-master.yaml
+++ b/hack/oz/oz-master.yaml
@@ -6,6 +6,9 @@ metadata:
   name: oz-master
 spec:
   containers:
+    # Need to generate the image name from a template to be able to
+    # optionally use local registry in case of deploying to something
+    # other than an all-in-one cluster
     - image: "openshift/oz-master"
       name: oz-master
       imagePullPolicy: IfNotPresent
