--- a/images/oz/base/oz.conf
+++ b/images/oz/base/oz.conf
@@ -7,7 +7,6 @@ ExecStart=/usr/local/bin/dind docker daemon \
   --host=unix:///var/run/docker.sock \
   --exec-opt native.cgroupdriver=cgroupfs \
   --storage-driver=vfs \
+  --insecure-registry=10.14.6.90:4000
   $DOCKER_NETWORK_OPTIONS \
   $INSECURE_REGISTRY
-# This is only required for upstream docker
-MountFlags=
