Ensure shared mount propagation

--- a/images/oz/base/oz.conf
+++ b/images/oz/base/oz.conf
@@ -1,5 +1,7 @@
 [Unit]
 Description=Docker-in-Docker (dind)
+Requires=ensure-mount-propagation.service
+After=ensure-mount-propagation.service
 
 [Service]
 ExecStart=
