--- a/images/oz/node/Dockerfile
+++ b/images/oz/node/Dockerfile
@@ -10,6 +10,7 @@ RUN mkdir -p /var/lib/origin/openshift.local.config
 
 ENV KUBECONFIG /config/admin.kubeconfig
 
+RUN systemctl enable ensure-mount-propagation.service
 RUN systemctl enable docker.service
 
 ADD openshift-generate-config.sh /usr/bin/
