--- a/images/oz/base/oz.conf
+++ b/images/oz/base/oz.conf
@@ -5,7 +5,7 @@ After=ensure-mount-propagation.service
 
 [Service]
 ExecStart=
-ExecStart=/usr/local/bin/dind-wrapper /usr/bin/dind daemon \
+ExecStart=/usr/local/bin/dind-wrapper /usr/local/bin/dind daemon \
   --host=unix:///var/run/docker.sock \
   --exec-opt native.cgroupdriver=cgroupfs \
   --storage-driver=vfs \
