Decommision nodes when their pod is stopping

--- a/hack/oz/ozone.yaml
+++ b/hack/oz/ozone.yaml
@@ -67,3 +67,7 @@ items:
           - mountPath: /config
             name: oz-config
             readOnly: true
+          lifecycle:
+            preStop:
+              exec:
+                command: ["/usr/local/bin/decommission-node.sh"]
