--- a/hack/oz/ozone.yaml
+++ b/hack/oz/ozone.yaml
@@ -20,6 +20,11 @@ items:
         - name: oz-config
           secret:
             secretName: oz-config
+        # TODO Use PersistentVolumes to support arbitrary undershift
+        - name: oz-etcd
+          hostPath:
+            # TODO Determine hostPath dynamically (generate yaml from template)
+            path: "/home/maru/src/openshift/src/github.com/openshift/origin/_oz/overshift/openshift.local.etcd"
 
         containers:
         # Need to generate the image name from a template to be able to
@@ -34,6 +39,8 @@ items:
           - mountPath: /config
             name: oz-config
             readOnly: true
+          - mountPath: /var/lib/origin/openshift.local.etcd
+            name: oz-etcd
 
 - apiVersion: v1
   kind: DeploymentConfig
