--- a/images/oz/base/Dockerfile
+++ b/images/oz/base/Dockerfile
@@ -29,9 +29,13 @@ RUN dnf -y update && dnf -y install git golang hg tar make \
   openvswitch bridge-utils ethtool \
   && dnf clean all
 
-# Install docker from upstream until fedora 23 has 1.10
+# Install docker 1.10 from upstream until it lands in Fedora.  Avoid
+# 1.11 for now.
 COPY docker.repo /etc/yum.repos.d/
-RUN dnf -y install docker-engine && dnf clean all
+RUN dnf -y install\
+ docker-engine-1.10.3\
+ docker-engine-selinux-1.10.3\
+ && dnf clean all
 
 # sshd should be enabled as needed
 RUN systemctl disable sshd.service
